[tool.poetry]
name = "PyClits"
version = "1.0.0"
description = "Analyzer of nonlinear data"
authors = ["Nikola Jajcay, Hynek Lavicka"]

[tool.poetry.dependencies]
python = ">= 3.7, < 4.0"
scipy = ">=1.3"
numpy = "^1.3"
mpmath = "^1.1.0"
scikit-learn = "^0.22.1"
pandas = ">= 1.0.0, < 1.1.0"
matplotlib = "^3.1.2"
pip = "^20.0.2"
pydevd = "^1.9.0"
pydevd-pycharm = "^201.3803.74"
pytest-pycharm = "^0.6.0"
sphinx = "^2.4.0"
sphinx-rtd_theme = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
